updated svg; fixed alignment of langSwitcher

--- a/src/styles/RadialMenu.scss
+++ b/src/styles/RadialMenu.scss
@@ -12,6 +12,7 @@
     border: 0;
     border-radius: 100px;
     margin: 0 5px;
+    padding: 0;
     cursor: pointer;
 
     &.lang-button--large {
